--- a/TProject/Config/DefaultEngine.ini
+++ b/TProject/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/TProjectContent/Map/MainMap.MainMap
+EditorStartupMap=/Game/TProjectContent/Map/MainMap.MainMap
+GlobalDefaultGameMode=/Game/TProjectContent/GameCore/BP_TP_GameMode.BP_TP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
