--- a/TProject/Config/DefaultEngine.ini
+++ b/TProject/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TProjectContent/Map/MainMap.MainMap
-EditorStartupMap=/Game/TProjectContent/Map/MainMap.MainMap
+GameDefaultMap=/Game/TProjectContent/Map/MenuMap.MenuMap
+EditorStartupMap=/Game/TProjectContent/Map/MenuMap.MenuMap
 GlobalDefaultGameMode=/Game/TProjectContent/GameCore/BP_TP_GameMode.BP_TP_GameMode_C
+GameInstanceClass=/Game/TProjectContent/GameCore/BP_TP_GameInstance.BP_TP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
